[package]
name = "celui_renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
std = [
    "celui_collections/std",
    "celui_math/std",
]

[dependencies]
celui_collections = { path = "../celui_collections/" }
celui_math = { path = "../celui_math/" }
celui_backend = { path = "../celui_backend/" }
